--- a/app/src/main/res/layout/activity_play2.xml
+++ b/app/src/main/res/layout/activity_play2.xml
@@ -11,16 +11,6 @@
     tools:context="rtc.patcharee.unchittha.crosswordgame.Play2Activity"
     android:background="@drawable/levell1">
 
-    <Button
-        android:text="ANSWER"
-        android:id="@+id/button4"
-        android:fontFamily="casual"
-        android:textSize="22sp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="130dp"
-        android:layout_height="50dp" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="420dp"
@@ -109,10 +99,8 @@
             android:layout_height="40dp"
             android:layout_width="40dp"
             android:background="@android:color/transparent"
-            android:layout_alignBaseline="@+id/editText13"
-            android:layout_alignBottom="@+id/editText13"
-            android:layout_alignRight="@+id/editText40"
-            android:layout_alignEnd="@+id/editText40" />
+            android:layout_marginTop="106dp"
+            android:layout_marginLeft="147dp" />
 
         <EditText
             android:inputType="textPersonName"
@@ -315,10 +303,248 @@
             android:textSize="20sp"
             tools:ignore="RtlHardcoded"
             android:layout_marginTop="73dp"
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="211dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+        android:inputType="textPersonName"
+        android:maxLength="1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/editText32"
+        android:textSize="20sp"
+        tools:ignore="RtlHardcoded"
+        android:layout_marginTop="73dp"
+        android:layout_marginLeft="274dp"
+        android:background="@android:color/transparent"/>
+
+        <EditText
+        android:inputType="textPersonName"
+        android:maxLength="1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/editText33"
+        android:textSize="20sp"
+        tools:ignore="RtlHardcoded"
+        android:layout_marginTop="73dp"
+        android:layout_marginLeft="307dp"
+        android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText34"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="207dp"
+            android:layout_marginLeft="180dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+        android:inputType="textPersonName"
+        android:maxLength="1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/editText35"
+        android:textSize="20sp"
+        tools:ignore="RtlHardcoded"
+        android:layout_marginTop="238dp"
+        android:layout_marginLeft="180dp"
+        android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText36"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="270dp"
+            android:layout_marginLeft="180dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText37"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="304dp"
+            android:layout_marginLeft="180dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText38"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="337dp"
+            android:layout_marginLeft="180dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText39"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="238dp"
+            android:layout_marginLeft="147dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText40"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="238dp"
+            android:layout_marginLeft="211dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText41"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="238dp"
+            android:layout_marginLeft="243dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText42"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="238dp"
+            android:layout_marginLeft="278dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText43"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="338dp"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText44"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="338dp"
+            android:layout_marginLeft="52dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText45"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="338dp"
+            android:layout_marginLeft="85dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText46"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="338dp"
+            android:layout_marginLeft="116dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText47"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="337dp"
+            android:layout_marginLeft="147dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText48"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="240dp"
+            android:layout_marginLeft="83dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText49"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="272dp"
+            android:layout_marginLeft="83dp"
+            android:background="@android:color/transparent"/>
+
+        <EditText
+            android:inputType="textPersonName"
+            android:maxLength="1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/editText50"
+            android:textSize="20sp"
+            tools:ignore="RtlHardcoded"
+            android:layout_marginTop="304dp"
+            android:layout_marginLeft="83dp"
             android:background="@android:color/transparent"/>
 
 
     </RelativeLayout>
+
+    <Button
+        android:text="ANSWER"
+        android:id="@+id/button4"
+        android:fontFamily="monospace"
+        android:textSize="22sp"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
