--- a/app/src/main/res/layout/activity_play5.xml
+++ b/app/src/main/res/layout/activity_play5.xml
@@ -8,6 +8,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="rtc.patcharee.unchittha.crosswordgame.Play5Activity">
+    tools:context="rtc.patcharee.unchittha.crosswordgame.Play5Activity"
+    android:background="@drawable/levell4">
+
+    <Button
+        android:text="ANSWER"
+        android:layout_height="50dp"
+        android:id="@+id/button7"
+        android:fontFamily="monospace"
+        android:textSize="22sp"
+        android:layout_width="130dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
